# add-to-path-python

./: LICENCE  README.md  main.py  pyproject.toml  requirements.txt  teste.py
interface/: main_window.py
src/: main.py
src/interface/: UI_main_window.py  main_window.py  pop_ups.py
ui/: main.ui  pop_ups.py
utils/: pop_ups.py
