[tool.poetry]
name = "add-to-path-python"
version = "0.1.0"
description = ""
authors = ["Sandenberg Ferreira Melo <77549672+sandenbergmelo@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "add_to_path_python"}]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
pyside6 = "^6.4.1"
pyqtdarktheme = "^1.2.1"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
