[tool.poetry]
name = "add-to-path-python"
version = "0.1.0"
description = ""
authors = ["Sandenberg Ferreira Melo <77549672+sandenbergmelo@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.12,>=3.7"
PySide6 = "^6.5.2"
pyqtdarktheme = "^2.1.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
